# equity-snapshot-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: try_snapshot.py
src/equity_snapshot/: __init__.py  exceptions.py  models.py  provider.py  validation.py
tests/: test_provider.py  test_validation.py
